<resources>
    <string name="app_name">CodeBook</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- Other strings -->
    <string name="about_title">About CodeBook</string>
    <string name="about_message">Thank you for using the CodeBook app!\n\nEmail: XuanRanDev@qq.com\n\nYou can find more information about the project on our GitHub page.</string>
    <string name="github_link">Visit our GitHub page\n\n</string>
    <string name="github_url">https://github.com/XuanRanDev/CodeBook</string>

    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search...</string>
    <string name="CopyAccountID">Copy Account</string>
    <string name="CopyPassword">Copy Password</string>
    <string name="delete">Delete</string>
    <string name="other">Other</string>
    <string name="donate">Donate</string>
    <string name="userRule">User Agreement</string>
    <string name="about">About</string>
    <string name="data">Data</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="add_an_application">Add Application</string>
    <string name="please_enter_the_application_name">Please enter the application name</string>
    <string name="please_enter_the_user_name">Please enter the username/account</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="export_import_data_tips">When exporting data, the program will encrypt all data stored in the database using AES256 and export it as a TXT file.
        \n\nWhen importing data, you need to enter the import password. Only after the password is successfully verified will the data be imported.

        \n\n* You can consider the salt value as an additional encryption password for the data. Be sure to save your salt value when exporting data. The salt value is randomly generated each time you export, and it will not be visible after export. You will need to enter the salt value used during generation when importing. The same password will produce different encryption results under different salt values. If the salt value is lost, the data cannot be recovered.
    </string>
    <string name="enter_password">Enter Password</string>
    <string name="export">Export</string>
    <string name="importStr">Import</string>
    <string name="export_success">Data exported successfully</string>
    <string name="import_success">Data imported successfully</string>
    <string name="import_error">Data import failed</string>
    <string name="select_file">Select File</string>
    <string name="export_error">Export failed</string>
    <string name="donate_tips">First of all, thank you very much for your donation. It is your support that motivates the project author to continue maintaining it.\n\nYou can click the button below to open the Alipay donation page directly, or take a screenshot to save the QR code image and use WeChat/Alipay to scan the code for donation.\n\n(Left Alipay/Right WeChat).</string>
    <string name="choose_encryption_method">Choose Encryption Method</string>
    <string name="choose_encryption_method_tips">CodeBook requires you to specify an encryption method.\n\nFingerprint method: Your device needs to be on Android 11 or above. You need to authorize your fingerprint when using it. CodeBook will use the high-strength encryption algorithm generated by the operating system to encrypt/decrypt your data. You need to authorize your fingerprint every time you start it. (Only when the device supports fingerprints)\n\nPassword method: CodeBook will require you to provide a password, then use this password as a random seed to generate a high-strength encryption key to encrypt/decrypt your data. You need to enter this password every time you start it.</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="password">Password</string>
    <string name="fingerprint_not_supported">Your device does not support fingerprint or fingerprint recognition is temporarily unavailable</string>
    <string name="fingerprint_title">Verify Fingerprint</string>
    <string name="fingerprint_subtitle">Please use fingerprint verification for identity authentication</string>
    <string name="password_title">Password Verification</string>
    <string name="enter_decryption_password">Please enter the data decryption password</string>
    <string name="enter_decryption_password_tips">If the data decryption password is lost, the data cannot be recovered.</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="set_password">Please enter the password to set</string>
    <string name="set_password_tips">If the password is forgotten, all data will be lost.</string>
    <string name="search_hint">Search...</string>
    <string name="verify_title">Complete Verification</string>
    <string name="finish_verfig">Continue after completing identity verification</string>
    <string name="password_error">Password verification error, please try again</string>
    <string name="account_copy">Account/Username copied</string>
    <string name="password_copy_tips">Password copied</string>
    <string name="remark">Remark</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_tips">Data cannot be recovered after deletion. Confirm delete?</string>
    <string name="deleted">Data deleted</string>
    <string name="copy">Copy</string>
    <string name="copy_success">Copy successful</string>
    <string name="input_remark">Please enter a remark</string>
    <string name="input_remark_tips">Remark information is stored unencrypted and cannot be edited after creation. Please understand.</string>
    <string name="exit_tips">Press again to exit</string>
    <string name="user_rule">User Agreement</string>
    <string name="re_auth">Re-authenticate</string>
    <string name="re_auth_tips">Your biometric authentication has expired, please re-authenticate.</string>
    <string name="fingerprint_require_R">For security reasons, the fingerprint method currently only supports Android 11 and above</string>
    <string name="read_and_agree">I have carefully read and agree to the CodeBook User Agreement, understand the implementation of CodeBook's encryption algorithm, and agree that any data loss or leakage under any circumstances is not related to the developer.</string>
    <string name="you_already_agree">You have read and agreed</string>
    <string name="agree_date">\n\n\nAgreement Date:</string>
    <string name="program_exception">Program Exception</string>
    <string name="save_log">Save Log</string>
    <string name="restart">Restart</string>
    <string name="log_saved">Log saved</string>
    <string name="log_saved_path">Log saved to:</string>
    <string name="log_deleted">Log deleted</string>
    <string name="save_failed">Save failed</string>
    <string name="build_time">Build Time:</string>
    <string name="git_hash">Git Hash:</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="user_cancel">User cancelled</string>
    <string name="fingerprint_auth_cancel">Biometric authentication has been cancelled or not passed, data cannot be loaded.</string>
    <string name="select_password_criteria">Select Password Criteria</string>
    <string name="contains_uppercase_letters">Uppercase Letters</string>
    <string name="contains_lowercase_letters">Lowercase Letters</string>
    <string name="contains_numbers">Numbers</string>
    <string name="contains_special_characters">Special Characters</string>
    <string name="password_length_selection">Generate Password Length</string>
    <string name="generate_password">Generate Password</string>
    <string name="salt">Salt</string>
    <string name="copy_salt">Copy Salt</string>
</resources>
