<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_content_view_dialog_cardView"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    app:cardCornerRadius="14dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_content_view_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="25dp"
            android:text="@string/add_an_application"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_content_view_dialog_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/baseline_more_vert_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_content_view_dialog_appName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_content_view_dialog_title">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="appName"
                android:hint="@string/please_enter_the_application_name"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_content_view_dialog_accountID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/add_content_view_dialog_appName"
            tools:ignore="MissingConstraints">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:hint="@string/please_enter_the_user_name"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_content_view_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintTop_toBottomOf="@id/add_content_view_dialog_accountID"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:drawablePadding="8dp"
                android:hint="@string/please_enter_the_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingEnd="20dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintTop_toBottomOf="@id/add_content_view_dialog_password">


            <Button
                android:id="@+id/add_content_view_dialog_cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Button
                android:id="@+id/add_content_view_dialog_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/save"
                android:textAppearance="?attr/textAppearanceBodySmall" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>

